<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="xyz.jaggedlab.gugas.expensior.sections.new_expenses.NewExpenseActivityFragment"
    tools:showIn="@layout/activity_new_expense">

    <LinearLayout
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="0dp"
        android:layout_weight="1">
    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin">

            <!--Title of the Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:text="@string/title_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:layout_gravity="start|center_vertical"/>

                <EditText
                    android:id="@+id/title_of_expense_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:layout_gravity="end|center_vertical"
                    android:inputType="text"
                    android:maxLines="1" />

            </LinearLayout>

            <!--Amount of the Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:text="@string/amount_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:layout_gravity="start|center_vertical"/>
                <EditText
                    android:id="@+id/amount_of_expense_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:layout_gravity="end|center_vertical"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </LinearLayout>

            <!--Category of Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/category_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3" />

                <EditText
                    android:id="@+id/category_of_expense_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:scrollHorizontally="true"
                    android:inputType="text"
                    android:maxLines="1"/>

            </LinearLayout>

            <!--Date of the Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView android:text="@string/date_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3" />

                <EditText
                    android:id="@+id/date_of_expense_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/today"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <!--Periodicity of the Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/peridicity_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"/>

                <Spinner
                    android:id="@+id/predicity_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:drawSelectorOnTop="false"
                    android:dropDownSelector="@drawable/ic_arrow_drop_down_black_24dp"
                    android:background="@color/background_color"/>

            </LinearLayout>

            <!--Description of the Expense-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/decription_of_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3" />

                <EditText
                    android:id="@+id/description_of_expense_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    </LinearLayout>

    <!--Add Expense Buton-->
    <LinearLayout
        android:id="@+id/add_expense_layout_button"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary">
        <TextView android:text="@string/add_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>


</LinearLayout>
