<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small" >

    <TextView
        android:id="@+id/add_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:text="@string/add_category_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/new_category_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/new_category_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/new_category_name"/>
            <EditText
                android:id="@+id/new_category_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/new_category_color_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/new_category_color"/>
            <EditText
                android:id="@+id/new_category_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8" />
        </LinearLayout>

        <Button
            android:id="@+id/new_category_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_category_submit"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"/>

    </LinearLayout>

</LinearLayout>